--- a/amd64.config
+++ b/amd64.config
@@ -1,17 +1,18 @@
 [debomatic]
 incoming: /root/incoming
 debootstrap: debootstrap
-architecture: system
+architecture: amd64
 threads: 3
 inotify: True
 sleep: 60
 logfile: /var/log/debomatic-amd64.log
-loglevel: info
+loglevel: debug
 
 [distributions]
 list: /root/amd64.distrib
 blacklist:
-mapper: {'unstable': 'jessie'}
+mapper: {'unstable': 'jessie',
+         'stretch-security': 'stretch'}
 
 [chroots]
 profile: debomatic
@@ -40,4 +41,3 @@ options: --log-level=info
 
 [jsonlogger]
 jsonfile = /var/log/debomatic-amd64.json
-
